fix: CORE-4416 make logos visible for members

--- a/templates/output/card-dropdown.module.css
+++ b/templates/output/card-dropdown.module.css
@@ -41,7 +41,7 @@
   align-items: center;
   justify-content: center;
   width: max-content;
-  padding: 0.25rem;
+  padding: 2px 4px;
   margin-top: 1rem;
   font-size: 0.75rem;
   font-style: normal;
